--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -6,25 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tovieda</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css">
 </head>
 
-<body>
-    <header>
-        <header class="header-container">
-            <div class="menu">
-                <img class="img-logo" src="../images/tovieda.jpg" alt="">
-                <nav class="nav">
-                    <ul>
-                        <li><a href="../index.html">Inicio</a></li>
-                        <li><a href="./catalogo.html">Catalogo</a></li>
-                        <li><a href="./contacto.html">Contacto</a></li>
-                        <li><a href="./pedidos.html">Pedidos</a></li>
-                        <li><a href="./sobremi.html">Sobre Mi</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
+
+<body class="bodyb">
+    <nav class="navbar navbar-expand-lg nav-background navbar-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html"> <img class="img-logo" src="../images/tovieda.jpg" alt=""></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link " href="../index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="./catalogo.html">Catalogo</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./contacto.html">Contacto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pedidos.html">Pedidos</a>
+              </li>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./sobremi.html">Sobre mi</a>
+            </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
     <div>
         <img class="sobremi1" src="../images/sobremi1.jpg" alt="">
@@ -44,7 +60,8 @@
     </div>
     <div>
         <img class="sobremi2" src="../images/sobremi2.jpg" alt="">
-        <p lorem2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ornare posuere tortor, in elementum quam
+        <p lorem2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ornare posuere tortor, in elementum
+            quam
             mollis at. Praesent cursus enim eget nulla pellentesque, sit amet condimentum neque auctor. Class aptent
             taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur id ligula mi. Sed
             varius mi ipsum, ultricies placerat enim fringilla et. Sed imperdiet arcu eu ligula imperdiet imperdiet. Ut
@@ -72,6 +89,14 @@
             </ul>
         </div>
     </footer>
+
+
+
+    
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
