--- a/index.html
+++ b/index.html
@@ -1,69 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tovieda</title>
-    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style.css">
 </head>
-<body>
+
+<body class="bodyb">
     <header class="header-container">
-        <div class="menu">      
-        <img class= "img-logo" src="images/tovieda.jpg" alt="">
-         <nav class="nav">
-        <ul>
-            <li><a href="./index.html">Inicio</a></li>
-            <li><a href="./pages/catalogo.html">Catalogo</a></li>
-            <li><a href="#">Contacto</a></li>
-            <li><a href="#">Pedidos</a></li>
-            <li><a href="#">Sobre Mi</a></li>
-        </ul>
-         </nav>
-        </div> 
+        <nav class="navbar navbar-expand-lg nav-background navbar-dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="index.html"> <img class="img-logo" src="./images/tovieda.jpg" alt=""></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./pages/catalogo.html">Catalogo</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link " href="./pages/pedidos.html">Pedidos</a>
+                  </li>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link " href="./pages/sobremi.html">Sobre mi</a>
+                </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
-    <section><img class="center" src="images/banner.jpg" alt=""></section>
-    <div><h1 class="dtc">DESTACADOS</h1></div>
+    <section><img class="banner" src="images/banner.jpg" alt=""></section>
+    <div>
+        <h1 class="title">Destacados</h1>
+    </div>
     <div class="page-content">
         <div class="product">
-            <h4>nombre</h4>
+            <h4>Cartera Gatitos</h4>
             <img src="images/producto1.webp" alt="">
-            <h4>$123</h4>
+            <h4>$500</h4>
             <button>agregar</button>
         </div>
         <div class="product">
-            <h4>nombre</h4>
-            <img src="images/producto1.webp" alt="">
-            <h4>$123</h4>
+            <h4>Monedero</h4>
+            <img src="images/monedero.jpg" alt="">
+            <h4>$200</h4>
             <button>agregar</button>
         </div>
         <div class="product">
-            <h4>nombre</h4>
-            <img src="images/producto1.webp" alt="">    
-            <h4>$123</h4>
+            <h4>Cartuchera</h4>
+            <img src="images/cartuchera.jpg" alt="">
+            <h4>$500</h4>
             <button>agregar</button>
         </div>
         <div class="product">
-            <h4>nombre</h4>
-            <img src="images/producto1.webp" alt="">
-            <h4>$123</h4>
+            <h4>Neceser chico</h4>
+            <img src="images/neceser.jpg" alt="">
+            <h4>$500</h4>
             <button>agregar</button>
-        </div>  
+        </div>
     </div>
-    
+
     </div>
     <footer class="footer">
-       <img class="logo-footer" src="./images/tovieda.jpg" alt="logo">
-       <div>
-        <h4>Medios de pago</h4>
-       </div>
-       <div class="redes">
-        <h4>Seguinos</h4>
-        <ul class="social">
-            <li><a href="https://www.instagram.com/tovieda/" target="_blank" rel="noopener noreferrer">@Tovieda</a></li>
-            <li><a href="https://www.facebook.com/TOVIEDA_costura-creativa-111885371537381" target="_blank" rel="noopener noreferrer">Tovieda</a></li>
-        </ul>
-       </div>
+        <img class="logo-footer" src="./images/tovieda.jpg" alt="logo">
+        <div>
+            <h4>Medios de pago</h4>
+        </div>
+        <div class="redes">
+            <h4>Seguinos</h4>
+            <ul class="social">
+                <li><a href="https://www.instagram.com/tovieda/" target="_blank" rel="noopener noreferrer">@Tovieda</a>
+                </li>
+                <li><a href="https://www.facebook.com/TOVIEDA_costura-creativa-111885371537381" target="_blank"
+                        rel="noopener noreferrer">Tovieda</a></li>
+            </ul>
+        </div>
     </footer>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
