--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,67 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tovieda</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css">
 </head>
-<body>
+
+<body class="bodyb">
     <header>
-        <header class="header-container">
-            <div class="menu">      
-            <img class= "img-logo" src="../images/tovieda.jpg" alt="">
-             <nav class="nav">
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./catalogo.html">Catalogo</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
-                <li><a href="./pedidos.html">Pedidos</a></li>
-                <li><a href="./sobremi.html">Sobre Mi</a></li>
-            </ul>
-             </nav>
-            </div> 
-        </header>
+        <nav class="navbar navbar-expand-lg nav-background navbar-dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="index.html"> <img class="img-logo" src="../images/tovieda.jpg" alt=""></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link " href="../index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link " href="./catalogo.html">Catalogo</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page"  href="./contacto.html">Contacto</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link " href="./pedidos.html">Pedidos</a>
+                  </li>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link " href="./sobremi.html">Sobre mi</a>
+                </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
     <div>
         <h1>Contactanos</h1>
         <div class="contact">
             <img class="icon" src="../images/whatsapp.png" alt="">
-            <h4>+5412345678</h4>
+            <h5>+5412345678</h5>
 
 
         </div>
         <div>
             <img class="icon" src="../images/gmail.png" alt="">
-            <h4>tovieda@gmail.com</h4>
+            <h5>tovieda@gmail.com</h5>
         </div>
         <div>
             <h2>Local</h2>
-            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3286.4753518927155!2d-58.71346178561139!3d-34.54151798047559!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbd0d8857b56d%3A0xcdd97d9e3323a294!2sPaunero%201600%2C%20B1663GJJ%20San%20Miguel%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1662585611626!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe class="map"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3286.4753518927155!2d-58.71346178561139!3d-34.54151798047559!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbd0d8857b56d%3A0xcdd97d9e3323a294!2sPaunero%201600%2C%20B1663GJJ%20San%20Miguel%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1662585611626!5m2!1ses-419!2sar"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
             <div class="store">
-            <div>
-            <img class="store-photo1" src="../images/local1.jpg" alt="">
+                <div>
+                    <img class="store-photo1" src="../images/local1.jpg" alt="">
+                </div>
+                <div>
+                    <img class="store-photo2    " src="../images/local2.jpg" alt="">
+                </div>
             </div>
-            <div>
-            <img class="store-photo2" src="../images/local2.jpg" alt="">
-            </div>
-        </div>     
         </div>
-        
+
     </div>
     <footer class="footer">
         <img class="logo-footer" src="../images/tovieda.jpg" alt="logo">
         <div>
-         <h4>Medios de pago</h4>
+            <h4>Medios de pago</h4>
         </div>
         <div class="redes">
-         <h4>Seguinos</h4>
-         <ul class="social">
-             <li><a href="https://www.instagram.com/tovieda/" target="_blank" rel="noopener noreferrer">@Tovieda</a></li>
-             <li><a href="https://www.facebook.com/TOVIEDA_costura-creativa-111885371537381" target="_blank" rel="noopener noreferrer">Tovieda</a></li>
-         </ul>
+            <h4>Seguinos</h4>
+            <ul class="social">
+                <li><a href="https://www.instagram.com/tovieda/" target="_blank" rel="noopener noreferrer">@Tovieda</a>
+                </li>
+                <li><a href="https://www.facebook.com/TOVIEDA_costura-creativa-111885371537381" target="_blank"
+                        rel="noopener noreferrer">Tovieda</a></li>
+            </ul>
         </div>
-     </footer>
+    </footer>
+
+
+    
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
