--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -1,28 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tovieda</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css">
 </head>
-<body>
+
+<body class="bodyb">
     <header>
-        <header class="header-container">
-            <div class="menu">      
-            <img class= "img-logo" src="../images/tovieda.jpg" alt="">
-             <nav class="nav">
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./catalogo.html">Catalogo</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
-                <li><a href="./pedidos.html">Pedidos</a></li>
-                <li><a href="./sobremi.html">Sobre Mi</a></li>
-            </ul>
-             </nav>
-            </div> 
-        </header>
+        <nav class="navbar navbar-expand-lg nav-background navbar-dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="index.html"> <img class="img-logo" src="../images/tovieda.jpg" alt=""></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link " href="../index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link " href="./catalogo.html">Catalogo</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./contacto.html">Contacto</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./pedidos.html">Pedidos</a>
+                  </li>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link " href="./sobremi.html">Sobre mi</a>
+                </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
     <div>
         <h2>Contacto para pedidos personalizados</h2>
@@ -35,25 +53,38 @@
         <label for="phone">Telefono</label><br>
         <input type="text" id="phone" name="phone"><br>
         <label for="order">Detalles del pedido</label><br>
-        <textarea rows = "5" cols = "60" name = "description">
-            
+        <textarea rows="5" cols="60" name="description">
+
          </textarea><br>
-         <input type = "submit" value = "enviar" />
+        <input type="submit" value="enviar" />
 
 
     </form>
     <footer class="footer">
         <img class="logo-footer" src="../images/tovieda.jpg" alt="logo">
         <div>
-         <h4>Medios de pago</h4>
+            <h4>Medios de pago</h4>
         </div>
         <div class="redes">
-         <h4>Seguinos</h4>
-         <ul class="social">
-             <li><a href="https://www.instagram.com/tovieda/" target="_blank" rel="noopener noreferrer">@Tovieda</a></li>
-             <li><a href="https://www.facebook.com/TOVIEDA_costura-creativa-111885371537381" target="_blank" rel="noopener noreferrer">Tovieda</a></li>
-         </ul>
+            <h4>Seguinos</h4>
+            <ul class="social">
+                <li><a href="https://www.instagram.com/tovieda/" target="_blank" rel="noopener noreferrer">@Tovieda</a>
+                </li>
+                <li><a href="https://www.facebook.com/TOVIEDA_costura-creativa-111885371537381" target="_blank"
+                        rel="noopener noreferrer">Tovieda</a></li>
+            </ul>
         </div>
-     </footer>
+    </footer>
+
+
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
