--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -42,7 +42,7 @@
             </div>
           </nav>
     </header>
-    <div>
+    <div class="contact-info">
         <h1>Contactanos</h1>
         <div class="contact">
             <img class="icon" src="../images/whatsapp.png" alt="">
