--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body class="bodyb">
+    <div class="grid">
     <header class="header-container">
         <nav class="navbar navbar-expand-lg nav-background navbar-dark">
             <div class="container-fluid">
@@ -47,31 +48,30 @@
         <h1 class="title">Destacados</h1>
     </div>
     <div class="page-content">
-        <div class="product">
-            <h4>Cartera Gatitos</h4>
-            <img src="images/producto1.webp" alt="">
-            <h4>$500</h4>
-            <button>agregar</button>
-        </div>
-        <div class="product">
-            <h4>Monedero</h4>
-            <img src="images/monedero.jpg" alt="">
-            <h4>$200</h4>
-            <button>agregar</button>
-        </div>
-        <div class="product">
-            <h4>Cartuchera</h4>
-            <img src="images/cartuchera.jpg" alt="">
-            <h4>$500</h4>
-            <button>agregar</button>
-        </div>
-        <div class="product">
-            <h4>Neceser chico</h4>
-            <img src="images/neceser.jpg" alt="">
-            <h4>$500</h4>
-            <button>agregar</button>
-        </div>
-    </div>
+        <div class="card col-lg-3 col-md-6 row align-items-start" style="width: 18rem;">
+           <img src="images/cartuchera.jpg" class="card-img-top" alt="../images/monedero.jpg">
+           <div class="card-body">
+             <h5 class="card-title">Cartuchera</h5>
+             <p class="card-text">$450</p>
+             <a href="#" class="btn btn-primary">Comprar</a>
+           </div>
+         </div>
+         <div class="card col-lg-3 col-md-6 row align-items-start" style="width: 18rem;">
+           <img src="images/monedero.jpg" class="card-img-top" alt="../images/monedero.jpg">
+           <div class="card-body">
+             <h5 class="card-title">Monedero</h5>
+             <p class="card-text">$300</p>
+             <a href="#" class="btn btn-primary">Comprar</a>
+           </div>
+         </div>
+         <div class="card col col-lg-3 col-md-6 row align-items-start" style="width: 18rem;">
+           <img src="images/neceser.jpg" class="card-img-top" alt="../images/monedero.jpg">
+           <div class="card-body">
+             <h5 class="card-title">Neceser</h5>
+             <p class="card-text">$600</p>
+             <a href="#" class="btn btn-primary">Comprar</a>
+           </div>
+         </div> 
 
     </div>
     <footer class="footer">
@@ -91,10 +91,14 @@
     </footer>
 
 
+    
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
-</body>
+    </div>
+    </body>
+
 
 </html>
