--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -45,31 +45,41 @@
     <div>
         <h1 class="title">Productos</h1>
     </div>
-    <div class="container text-center">
-        <div class="row">
-          <div class="col 4">
-            <h4>Cartera Gatitos</h4>
-            <img src="../images/producto1.webp" alt="">
-            <h4>$500</h4>
-            <button>agregar</button>
+    <div class="page-content">
+         <div class="card col-lg-3 col-md-6 row align-items-start" style="width: 18rem;">
+            <img src="../images/cartuchera.jpg" class="card-img-top" alt="../images/monedero.jpg">
+            <div class="card-body">
+              <h5 class="card-title">Cartuchera</h5>
+              <p class="card-text">$450</p>
+              <a href="#" class="btn btn-primary">Comprar</a>
+            </div>
           </div>
-          <div class="col 4">
-            Column
+          <div class="card col-lg-3 col-md-6 row align-items-start" style="width: 18rem;">
+            <img src="../images/monedero.jpg" class="card-img-top" alt="../images/monedero.jpg">
+            <div class="card-body">
+              <h5 class="card-title">Monedero</h5>
+              <p class="card-text">$300</p>
+              <a href="#" class="btn btn-primary">Comprar</a>
+            </div>
           </div>
-          <div class="col 4">
-            Column
-          </div>
-          <div class="col 4">
-            Column
-          </div>
-          <div class="col 4">
-            Column
-          </div>
-          <div class="col 4">
-            Column
-          </div>
-        </div>
-      </div>
+          <div class="card col col-lg-3 col-md-6 row align-items-start" style="width: 18rem;">
+            <img src="../images/neceser.jpg" class="card-img-top" alt="../images/monedero.jpg">
+            <div class="card-body">
+              <h5 class="card-title">Neceser</h5>
+              <p class="card-text">$600</p>
+              <a href="#" class="btn btn-primary">Comprar</a>
+            </div>
+          </div>  
+          <div class="card col-lg-3 col-md-6 row align-items-start" style="width: 18rem;">
+            <img src="../images/producto1.webp" class="card-img-top" alt="../images/monedero.jpg">
+            <div class="card-body">
+              <h5 class="card-title">Cartera</h5>
+              <p class="card-text">500$</p>
+              <a href="#" class="btn btn-primary">Comprar</a>
+            </div>
+          </div>                           
+          
+    </div>
     <div>
         <button class="button-cat">Ver Mas</button>
     </div>
