--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -13,66 +13,61 @@
 
 
 <body class="bodyb">
-    <nav class="navbar navbar-expand-lg nav-background navbar-dark">
+    <nav class="navbar navbar-expand-lg nav-background   navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"> <img class="img-logo" src="../images/tovieda.jpg" alt=""></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link " href="../index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link " href="./catalogo.html">Catalogo</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./contacto.html">Contacto</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./pedidos.html">Pedidos</a>
-              </li>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./sobremi.html">Sobre mi</a>
-            </li>
-            </ul>
-          </div>
+            <a class="navbar-brand" href="index.html"> <img class="img-logo" src="../images/tovieda.jpg" alt=""></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link " href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="./catalogo.html">Catalogo</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contacto.html">Contacto</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pedidos.html">Pedidos</a>
+                    </li>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./sobremi.html">Sobre mi</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </nav>
+    </nav>
     </header>
     <div>
-        <img class="sobremi1" src="../images/sobremi1.jpg" alt="">
-        <p class="lorem1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ornare posuere tortor, in
-            elementum quam mollis at. Praesent cursus enim eget nulla pellentesque, sit amet condimentum neque auctor.
-            Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur id
-            ligula mi. Sed varius mi ipsum, ultricies placerat enim fringilla et. Sed imperdiet arcu eu ligula imperdiet
-            imperdiet. Ut eget venenatis magna. Sed est nulla, tincidunt a bibendum non, facilisis ac urna. Pellentesque
-            massa dui, porta et turpis id, consequat aliquam urna.
-
-            Sed dapibus eget mi et rhoncus. Donec at congue magna, ut scelerisque libero. Suspendisse vitae augue nisl.
-            Nullam a massa nec nunc hendrerit placerat. Sed et neque eget tortor auctor commodo quis vel erat. Donec
-            interdum, massa ac vehicula eleifend, enim quam vestibulum eros, fringilla dapibus dui quam vitae lacus.
-            Vestibulum at neque sit amet libero molestie bibendum. Donec eget lacus viverra, condimentum mi lacinia,
-            eleifend ipsum!</p>
+        <img class="about-me-img1" src="../images/sobremi1.jpg" alt="">
+        <p class="about-me-text">A lo largo de mi vida siempre me dedique a trabajar en relación de dependencia,
+            nunca habia intentado aventurarme en algun proyecto propio, por esto al haber sido afectada por la pandemia
+            a principios de 2020 y perdido mi trabajo decidi arriesgarme
+            y probar suerte en un emprendimiento.
+            Lo primero que vi y me intereso fue un curso de peluqueria que daban gratis cerca de mi casa, pero al
+            comenzar dicho curso no pasaron ni dos semanas y fue cancelado por
+            covid. En este momento fue cuando una tia mia me regalo una maquina de coser para poder hacerle cosas a mis
+            hijos, reparar ropa que se habiad desgastado y cosas por el
+            estilo. Ahi fue cuando vi la oportunidad de aprender a coser y poder vender mis cosas a familiares y
+            conocidos.
+            De a poco fui aprendiendo a confeccionar diferentes tipos de accesorios e indumentarias y con el tiempo este
+            emprendimiento fue creciendo</p>
 
     </div>
     <div>
-        <img class="sobremi2" src="../images/sobremi2.jpg" alt="">
-        <p lorem2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ornare posuere tortor, in elementum
-            quam
-            mollis at. Praesent cursus enim eget nulla pellentesque, sit amet condimentum neque auctor. Class aptent
-            taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur id ligula mi. Sed
-            varius mi ipsum, ultricies placerat enim fringilla et. Sed imperdiet arcu eu ligula imperdiet imperdiet. Ut
-            eget venenatis magna. Sed est nulla, tincidunt a bibendum non, facilisis ac urna. Pellentesque massa dui,
-            porta et turpis id, consequat aliquam urna.
-
-            Sed dapibus eget mi et rhoncus. Donec at congue magna, ut scelerisque libero. Suspendisse vitae augue nisl.
-            Nullam a massa nec nunc hendrerit placerat. Sed et neque eget tortor auctor commodo quis vel erat. Donec
-            interdum, massa ac vehicula eleifend, enim quam vestibulum eros, fringilla dapibus dui quam vitae lacus.
-            Vestibulum at neque sit amet libero molestie bibendum. Donec eget lacus viverra, condimentum mi lacinia,
-            eleifend ipsum.</p>
+        <img class="about-me-img2"src="../images/sobremi2.jpg" alt="">
+        <p lorem2 class="about-me-text2">Mi familia siempre fue un gran soporte para mi, y hoy en dia con mis hijos mas grandes viviendo por su cuenta y mi marido siendo una gran ayuda cuidando de los mas chicos
+            me pude dedicar a sacar este proyecto a flote.
+            Tovieda espera transmitir ese espiritu familiar, siendo creaciones mas cercanas a lo que se puede esperar de una madre o abuela que maneja la maquina de coser y confecciona
+            sus vestimentas y accesorios para sus hijos o nietos.
+            De ahi mismo sale el nombre "Tovieda" es una combinacion de las silabas iniciales del nombre de mis hijos.
+            Espero que un pedazito de ese cariño pueda llegar a sus hogares y que nos sigan eligiendo por nuestros productos unicos y hechos con amor.
+            </p>
     </div>
     <footer class="footer">
         <img class="logo-footer" src="../images/tovieda.jpg" alt="logo">
@@ -92,7 +87,7 @@
 
 
 
-    
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
