--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -53,7 +53,7 @@
         <label for="phone">Telefono</label><br>
         <input type="text" id="phone" name="phone"><br>
         <label for="order">Detalles del pedido</label><br>
-        <textarea rows="5" cols="60" name="description">
+        <textarea class="order-details" rows="5" cols="60" name="description">
 
          </textarea><br>
         <input type="submit" value="enviar" />
