--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="bodyb">
-    <div class="grid">
+    <div class=>
     <header class="header-container">
         <nav class="navbar navbar-expand-lg nav-background navbar-dark">
             <div class="container-fluid">
@@ -34,7 +34,6 @@
                   <li class="nav-item">
                     <a class="nav-link " href="./pages/pedidos.html">Pedidos</a>
                   </li>
-                </li>
                 <li class="nav-item">
                   <a class="nav-link " href="./pages/sobremi.html">Sobre mi</a>
                 </li>
