--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tovieda</title>
+    <title>Tovieda | indumentaria artesanal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
@@ -44,11 +44,14 @@
     </header>
     <section><img class="banner" src="images/banner.jpg" alt=""></section>
     <div>
-        <h1 class="title">Destacados</h1>
+      <h1 class="enc">Indumentaria artesanal hecha con amor</h1>
+    </div>
+    <div>
+        <h2 class="title">Destacados</h2>
     </div>
     <div class="page-content">
         <div class="card col-lg-3 col-md-6 row align-items-start" style="width: 18rem;">
-           <img src="images/cartuchera.jpg" class="card-img-top" alt="../images/monedero.jpg">
+           <img src="images/cartuchera.jpg" class="card-img-top" alt="Cartuchera diseño de llamas">
            <div class="card-body">
              <h5 class="card-title">Cartuchera</h5>
              <p class="card-text">$450</p>
@@ -56,7 +59,7 @@
            </div>
          </div>
          <div class="card col-lg-3 col-md-6 row align-items-start" style="width: 18rem;">
-           <img src="images/monedero.jpg" class="card-img-top" alt="../images/monedero.jpg">
+           <img src="images/monedero.jpg" class="card-img-top" alt="Monedero diseño de ositos">
            <div class="card-body">
              <h5 class="card-title">Monedero</h5>
              <p class="card-text">$300</p>
@@ -64,7 +67,7 @@
            </div>
          </div>
          <div class="card col col-lg-3 col-md-6 row align-items-start" style="width: 18rem;">
-           <img src="images/neceser.jpg" class="card-img-top" alt="../images/monedero.jpg">
+           <img src="images/neceser.jpg" class="card-img-top" alt="Neceser diseño koala">
            <div class="card-body">
              <h5 class="card-title">Neceser</h5>
              <p class="card-text">$600</p>
