--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -47,7 +47,7 @@
     </div>
     <div class="page-content">
          <div class="card col-lg-3 col-md-6 row align-items-start" style="width: 18rem;">
-            <img src="../images/cartuchera.jpg" class="card-img-top" alt="../images/monedero.jpg">
+            <img src="../images/cartuchera.jpg" class="card-img-top" alt="Cartuchera diseño de llamas">
             <div class="card-body">
               <h5 class="card-title">Cartuchera</h5>
               <p class="card-text">$450</p>
@@ -55,7 +55,7 @@
             </div>
           </div>
           <div class="card col-lg-3 col-md-6 row align-items-start" style="width: 18rem;">
-            <img src="../images/monedero.jpg" class="card-img-top" alt="../images/monedero.jpg">
+            <img src="../images/monedero.jpg" class="card-img-top" alt="Monedero diseño de ositos">
             <div class="card-body">
               <h5 class="card-title">Monedero</h5>
               <p class="card-text">$300</p>
@@ -63,7 +63,7 @@
             </div>
           </div>
           <div class="card col col-lg-3 col-md-6 row align-items-start" style="width: 18rem;">
-            <img src="../images/neceser.jpg" class="card-img-top" alt="../images/monedero.jpg">
+            <img src="../images/neceser.jpg" class="card-img-top" alt="Neceser diseño de koala">
             <div class="card-body">
               <h5 class="card-title">Neceser</h5>
               <p class="card-text">$600</p>
@@ -71,7 +71,7 @@
             </div>
           </div>  
           <div class="card col-lg-3 col-md-6 row align-items-start" style="width: 18rem;">
-            <img src="../images/producto1.webp" class="card-img-top" alt="../images/monedero.jpg">
+            <img src="../images/producto1.webp" class="card-img-top" alt="Cartera de gatitos">
             <div class="card-body">
               <h5 class="card-title">Cartera</h5>
               <p class="card-text">500$</p>
